--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,7 @@ services:
       - ./core:/app
     ports:
       - "8000:8000"
-      
+    environment:
+      - SECRET_KEY=test
+      - DEBUG=True
+         
